[project]
name = "phantom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.1",
    "langgraph>=1.2.4",
    "litellm>=1.87.1",
    "python-dotenv>=1.2.2",
]
